[tool.poetry]
name = "cloudendure-python"
version = "0.1.9"
description = "Python wrapper and CLI for CloudEndure"
authors = ["Mark Beacom <mbeacom@2ndwatch.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
boto3 = "^1.12.4"
fire = "^0.2.1"
six = "^1.14.0"
certifi = "^2019.11.28"
python-dateutil = "^2.8.1"
setuptools = "^45.2.0"
urllib3 = "^1.25.8"
cookiecutter = "^1.7.0"
cloudendure = "^0.1.8"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
yapf = "^0.29.0"
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"
bandit = "^1.6.2"
autopep8 = "^1.5"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-isort = "^0.3.1"
coverage = "^5.0.3"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
mock = "^4.0.1"
responses = "^0.10.9"
twine = "^3.1.1"
mypy = "^0.761"
pep8 = "^1.7.1"
pymdown-extensions = "^6.3"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
pydoc-markdown = "^2.0.5"
nose = "^1.3.7"
pluggy = "^0.13.1"
py = "^1.8.1"
randomize = "^0.14"
moto = "^1.3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
