[tool.poetry]
name = "cloudendure"
version = "0.2.3"
description = "Python wrapper and CLI for CloudEndure"
authors = ["Mark Beacom <mark@markbeacom.com>", "Tom Warnock <twarnock@2ndwatch.com>"]
maintainers = ["Evan Lucchesi <evan@2ndwatch.com>", "Nick Selpa <nselpa@2ndwatch.com>"]
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "REFERENCE.md",
    "SECURITY.md",
]
readme = "README.md"
repository = "https://github.com/2ndWatch/cloudendure-python"
homepage = "https://2ndwatch.github.io/cloudendure-python/"
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS 9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows Server 2008",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
boto3 = "^1.12.4"
fire = "^0.2.1"
six = "^1.14.0"
certifi = "^2019.11.28"
python-dateutil = "^2.8.1"
setuptools = "^45.2.0"
urllib3 = "^1.25.8"
cookiecutter = "^1.7.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
yapf = "^0.29.0"
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"
bandit = "^1.6.2"
autopep8 = "^1.5"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-isort = "^0.3.1"
coverage = "^5.0.3"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
mock = "^4.0.1"
responses = "^0.10.9"
twine = "^3.1.1"
mypy = "^0.761"
pep8 = "^1.7.1"
pymdown-extensions = "^6.3"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
pydoc-markdown = "^2.0.5"
nose = "^1.3.7"
pluggy = "^0.13.1"
py = "^1.8.1"
randomize = "^0.14"
moto = "^1.3.14"

[tool.poetry.scripts]
cloudendure = "cloudendure.cloudendure:main"
ce = "cloudendure.cloudendure:main"

[tool.isort]
line_length = 120
multi_line_output = 5
include_trailing_comma = true
known_future_library = "future"
known_third_party = [
    "boto3",
    "botocore",
    "fire",
    "pytest",
    "requests",
    "urllib3",
    "six",
    "yaml",
]
known_first_party = [
    "cloudendure_api",
    "api",
    "cloudendure",
    "config",
    "events",
    "exceptions",
    "models",
    "templates",
    "utils",
]
default_section = "THIRDPARTY"
indent = '    '
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [
    "cloudendure/cloudendure_api",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 4
spaces_before_comment = 2
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DEDENT_CLOSING_BRACKETS = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
COALESCE_BRACKETS = true
USE_TABS = false
ALLOW_MULTILINE_LAMBDAS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
INDENT_DICTIONARY_VALUE = true
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true
DISABLE_ENDING_COMMA_HEURISTIC = true

[tool.flake8]
line_length = 120
based_on_style = "pep8"
column_limit = 120
indent_width = 4
spaces_before_comment = 2
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DEDENT_CLOSING_BRACKETS = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
COALESCE_BRACKETS = true
USE_TABS = false
ALLOW_MULTILINE_LAMBDAS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
INDENT_DICTIONARY_VALUE = true
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true
DISABLE_ENDING_COMMA_HEURISTIC = true

[tool.black]
line-length = 120
target-version = ["py38"]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | cloudendure_api/
)
'''

[tool.pylint]
line_length = 120

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue", accent = "light blue"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
