[tool.poetry]
name = "cloudendure"
version = "v5.1.0"
description = "A CloudEndure client built fully on the OpenApi definition."
authors = ["Craig Monson <cmonson@2ndwatch.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python_dateutil = "~2.5.3"
setuptools = "^21.0.0"
urllib3 = "^1.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pytest-watch = "^4.2.0"
pytest-spec = "^3.1.0"
pytest-testmon = "^1.0.3"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
